Fixed Horizontal Scrolling Bug
The page was always able to scroll horizontally to whitespace even when there is no element taking the space - fixed.

--- a/src/SetPersonal.css
+++ b/src/SetPersonal.css
@@ -1,9 +1,16 @@
+
+.ContainerRules
+{
+    max-width: 100%;
+    overflow-x: hidden;
+
+}
+
 .BannerRow
 {
     background: #21CE99;
     color: #6C6A69;
     padding-left: 5rem;
-
 }
 
 .BannerCol
